--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -8,6 +8,10 @@
     opacity: 0.4;
 }
 
+.disabled-wheel {
+  pointer-events: none;
+}
+
 #game-board-container {
   padding: 0.5em 0.5em;
   border: 1px solid black;
